force-app/main/default/objects/Order__c/fields/ERP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Id__c</fullName>
    <label>ERP Order Id</label>
    <length>18</length>
    <externalId>true</externalId>
    <unique>true</unique>
    <type>Text</type>
</CustomField>