force-app/main/default/objects/Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>New</fullName><default>true</default><label
        >New</label></value>
            <value><fullName>Processing</fullName><default>false</default><label
        >Processing</label></value>
            <value><fullName>Shipped</fullName><default>false</default><label
        >Shipped</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label
        >Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>