force-app/main/default/objects/Order__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Synced</fullName><default>true</default><label
        >Not Synced</label></value>
            <value><fullName>Synced</fullName><default>false</default><label
        >Synced</label></value>
            <value><fullName>Error</fullName><default>false</default><label
        >Error</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>